--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>com.udaan.archetypes</groupId>
     <artifactId>dropwizard-kotlin</artifactId>
-    <version>1.2.0</version>
+    <version>1.2-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
