--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <prerequisites>
         <maven>3.0.0</maven>
@@ -8,7 +7,7 @@
 
     <groupId>com.udaan.archetypes</groupId>
     <artifactId>dropwizard-kotlin</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2.0</version>
     <packaging>maven-archetype</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -35,7 +34,8 @@
         <connection>scm:git:https://github.com/udaan-com/archetype-dropwizard-kotlin.git</connection>
         <developerConnection>scm:git:https://github.com/udaan-com/archetype-dropwizard-kotlin.git</developerConnection>
         <url>https://github.com/udaan-com/archetype-dropwizard-kotlin/tree/master</url>
-    </scm>
+      <tag>dropwizard-kotlin-1.2.0</tag>
+  </scm>
 
     <distributionManagement>
         <snapshotRepository>
