--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.udaan.archetypes</groupId>
     <artifactId>dropwizard-kotlin</artifactId>
-    <version>1.2.0</version>
+    <version>1.2.1-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -34,7 +34,7 @@
         <connection>scm:git:https://github.com/udaan-com/archetype-dropwizard-kotlin.git</connection>
         <developerConnection>scm:git:https://github.com/udaan-com/archetype-dropwizard-kotlin.git</developerConnection>
         <url>https://github.com/udaan-com/archetype-dropwizard-kotlin/tree/master</url>
-      <tag>dropwizard-kotlin-1.2.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
